--- a/components/nstackx/nstackx_util/BUILD.gn
+++ b/components/nstackx/nstackx_util/BUILD.gn
@@ -136,6 +136,7 @@ if (defined(ohos_lite)) {
       "platform/unix",
       "$NSTACKX_ROOT/nstackx_core/",
       "//utils/native/base/include/",
+      "//third_party/bounds_checking_function/include",
       "//base/hiviewdfx/hilog/interfaces/native/innerkits/",
     ]
     sources = [
@@ -156,8 +157,8 @@ if (defined(ohos_lite)) {
     ]
 
     deps = [
+      "//third_party/bounds_checking_function:libsec_shared",
       "//third_party/mbedtls",
-      "//utils/native/base:utilsecurec_shared",
     ]
     external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
     public_configs = [ ":nstackx_util_header" ]
