--- a/sdk/BUILD.gn
+++ b/sdk/BUILD.gn
@@ -49,8 +49,8 @@ if (defined(ohos_lite)) {
     build_type = "ohos_static_library"
   }
   common_client_deps += [
+    "//third_party/bounds_checking_function:libsec_shared",
     "//utils/native/base:utils",
-    "//utils/native/base:utilsecurec_shared",
   ]
 }
 
@@ -63,6 +63,7 @@ config("dsoftbus_sdk_interface") {
     "$dsoftbus_root_path/interfaces/kits/transport",
     "$dsoftbus_root_path/sdk/transmission/session/cpp/include",
     "$dsoftbus_root_path/interfaces/inner_kits/transport",
+    "//third_party/bounds_checking_function/include",
   ]
 }
 
