--- a/core/transmission/trans.gni
+++ b/core/transmission/trans.gni
@@ -52,6 +52,7 @@ if (defined(ohos_lite)) {
     "$dsoftbus_root_path/sdk/frame/$os_type/include",
     "$dsoftbus_root_path/sdk/transmission/trans_channel/tcp_direct",
     "//third_party/cJSON",
+    "//third_party/bounds_checking_function/include",
   ]
   trans_session_src += [
     "$dsoftbus_root_path/core/transmission/ipc/$os_type/src/trans_client_proxy.cpp",
@@ -59,6 +60,6 @@ if (defined(ohos_lite)) {
   ]
   trans_session_deps += [
     "//utils/native/base:utils",
-    "//utils/native/base:utilsecurec_shared",
+    "//third_party/bounds_checking_function:libsec_shared",
   ]
 }
