--- a/tests/adapter/unittest/BUILD.gn
+++ b/tests/adapter/unittest/BUILD.gn
@@ -32,6 +32,7 @@ if (defined(ohos_lite)) {
       include_dirs = [
         "$dsoftbus_root_path/adapter/common/include",
         "$dsoftbus_root_path/core/common/include/",
+        "//third_party/bounds_checking_function/include",
       ]
       deps = [
         "//foundation/communication/dsoftbus/adapter:softbus_adapter",
@@ -55,6 +56,7 @@ if (defined(ohos_lite)) {
     include_dirs = [
       "$dsoftbus_root_path/adapter/common/include",
       "$dsoftbus_root_path/core/common/include/",
+      "//third_party/bounds_checking_function/include",
     ]
     deps = [
       "//foundation/communication/dsoftbus/adapter:softbus_adapter",
