--- a/tests/sdk/transmission/trans_channel/br/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/br/BUILD.gn
@@ -32,10 +32,10 @@ ohos_unittest("auth_session_gtest") {
     "$dsoftbus_root_path/adapter:softbus_adapter",
     "$dsoftbus_root_path/core/common:softbus_utils",
     "$dsoftbus_root_path/sdk:softbus_client",
+    "//third_party/bounds_checking_function:libsec_shared",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
     "//utils/native/base:utils",
-    "//utils/native/base:utilsecurec_shared",
   ]
 
   external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
