--- a/tests/sdk/transmission/trans_channel/qos/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/qos/BUILD.gn
@@ -25,6 +25,7 @@ ohos_unittest("TransQosTest") {
     "$dsoftbus_root_path/interfaces/kits/transport",
     "$dsoftbus_root_path/interfaces/kits/common",
     "//utils/native/base/include",
+    "//third_party/bounds_checking_function/include",
   ]
 
   deps = [
@@ -50,6 +51,7 @@ ohos_unittest("TransQosStatClientTest") {
     "$dsoftbus_root_path/interfaces/kits/transport",
     "$dsoftbus_root_path/interfaces/kits/common",
     "//utils/native/base/include",
+    "//third_party/bounds_checking_function/include",
   ]
 
   deps = [
@@ -75,6 +77,7 @@ ohos_unittest("TransQosStatServerTest") {
     "$dsoftbus_root_path/interfaces/kits/transport",
     "$dsoftbus_root_path/interfaces/kits/common",
     "//utils/native/base/include",
+    "//third_party/bounds_checking_function/include",
   ]
 
   deps = [
