--- a/core/frame/standard/init/src/softbus_server_musl.cfg
+++ b/core/frame/standard/init/src/softbus_server_musl.cfg
@@ -10,7 +10,8 @@
             "name" : "softbus_server",
             "path" : ["/system/bin/sa_main", "/system/profile/softbus_server.xml"],
             "uid" : "dsoftbus",
-            "gid" : ["dsoftbus", "system", "shell"]
+            "gid" : ["dsoftbus", "system", "shell"],
+            "secon" : "u:r:softbus_server:s0"
         }
     ]
 }
