support same account filter of BLE
Signed-off-by: sun-zhongguo <sunzhongguo@huawei.com>

--- a/core/bus_center/lnn/net_builder/net_builder.gni
+++ b/core/bus_center/lnn/net_builder/net_builder.gni
@@ -26,6 +26,8 @@ if (dsoftbus_standard_feature_lnn_net) {
 } else {
   bus_center_builder_src = [ "$dsoftbus_root_path/core/bus_center/lnn/net_builder/src/lnn_net_builder_virtual.c" ]
 }
-bus_center_builder_inc =
-    [ "$dsoftbus_root_path/core/bus_center/lnn/net_builder/include" ]
+bus_center_builder_inc = [
+  "$dsoftbus_root_path/core/bus_center/lnn/net_builder/include",
+  "$dsoftbus_root_path/core/adapter/bus_center/include",
+]
 bus_center_builder_deps = []
