--- a/core/adapter/core_adapter.gni
+++ b/core/adapter/core_adapter.gni
@@ -42,7 +42,10 @@ if (defined(ohos_lite)) {
 
     bus_center_core_adapter_deps = []
   } else {
-    bus_center_core_adapter_src = [ "$dsoftbus_root_path/core/adapter/bus_center/src/lnn_settingdata_event_monitor.cpp" ]
+    bus_center_core_adapter_src = [
+      "$dsoftbus_root_path/core/adapter/bus_center/src/lnn_settingdata_event_monitor.cpp",
+      "$dsoftbus_root_path/core/adapter/bus_center/src/lnn_ohos_account.cpp",
+    ]
 
     bus_center_core_adapter_inc = [
       "$dsoftbus_root_path/adapter/common/bus_center/include",
@@ -52,9 +55,12 @@ if (defined(ohos_lite)) {
       "//foundation/distributeddatamgr/appdatamgr/interfaces/inner_api/native/rdb/include",
       "//foundation/distributeddatamgr/appdatamgr/interfaces/inner_api/native/dataability/include",
       "//foundation/aafwk/standard/interfaces/innerkits/dataobs_manager/include",
+      "//base/account/os_account/interfaces/innerkits/ohosaccount/native/include/",
     ]
 
     bus_center_core_adapter_deps = [
+      "//base/account/os_account/frameworks/ohosaccount/native:libaccountkits",
+      "//base/account/os_account/frameworks/osaccount/native:os_account_innerkits",
       "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
       "//foundation/aafwk/standard/interfaces/innerkits/dataobs_manager:dataobs_manager",
       "//foundation/aafwk/standard/interfaces/innerkits/uri:zuri",
