--- a/core/bus_center/lnn/net_buscenter/net_manager.gni
+++ b/core/bus_center/lnn/net_buscenter/net_manager.gni
@@ -22,6 +22,8 @@ if (dsoftbus_standard_feature_lnn_net) {
 } else {
   bus_center_net_mgr_src = [ "$dsoftbus_root_path/core/bus_center/lnn/net_buscenter/src/lnn_network_manager_virtual.c" ]
 }
-bus_center_net_mgr_inc =
-    [ "$dsoftbus_root_path/core/bus_center/lnn/net_buscenter/include" ]
+bus_center_net_mgr_inc = [
+  "$dsoftbus_root_path/core/bus_center/lnn/net_buscenter/include",
+  "$dsoftbus_root_path/core/adapter/bus_center/include",
+]
 bus_center_net_mgr_deps = []
