--- a/dsoftbus.gni
+++ b/dsoftbus.gni
@@ -15,6 +15,9 @@ dsoftbus_root_path = "//foundation/communication/dsoftbus"
 dsoftbus_sdk_path = "//foundation/communication/dsoftbus/sdk"
 dsoftbus_core_path = "//foundation/communication/dsoftbus/core"
 hispark_pegasus_sdk_path = "//device/soc/hisilicon/hi3861v100/sdk_liteos"
+aainnerkits_path = "//foundation/aafwk/standard/interfaces/innerkits"
+aaservices_path = "//foundation/aafwk/standard/services"
+aakits_path = "//foundation/aafwk/standard/frameworks/kits"
 
 declare_args() {
   softbus_adapter_common = "//foundation/communication/dsoftbus/adapter/common"
