--- a/tests/sdk/transmission/trans_channel/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/BUILD.gn
@@ -63,6 +63,9 @@ if (defined(ohos_lite)) {
   }
   group("unittest") {
     testonly = true
-    deps = [ ":TransSdkTest" ]
+    deps = [
+      ":TransSdkTest",
+      "permission:DynamicPermissionTest",
+    ]
   }
 }
