IssueNo:#I57IWN Description:ability_base目录整改及周边子系统依赖标准化 Sig:SIG_ApplicationFramework Feature or Bugfix:Feature Binary Source: No
Signed-off-by: dy_study <dingyao5@huawei.com>
Change-Id: I91969228c48c334da3186b6a3925e007a08f082d

--- a/adapter/common/bus_center/bus_center_adapter.gni
+++ b/adapter/common/bus_center/bus_center_adapter.gni
@@ -91,8 +91,7 @@ if (defined(ohos_lite)) {
         "//foundation/communication/wifi/wifi/interfaces/innerkits/native_cpp/wifi_standard/interfaces",
         "//foundation/communication/wifi/wifi/services/wifi_standard/wifi_framework/common/net_helper",
       ]
-      bus_center_adapter_deps +=
-          [ "${aafwk_path}/interfaces/innerkits/want:want" ]
+      bus_center_adapter_deps += []
       bus_center_adapter_external_deps +=
           [ "common_event_service:cesfwk_innerkits" ]
     } else {
