--- a/core/adapter/core_adapter.gni
+++ b/core/adapter/core_adapter.gni
@@ -54,17 +54,17 @@ if (defined(ohos_lite)) {
     bus_center_core_adapter_inc = [
       "$dsoftbus_root_path/adapter/common/bus_center/include",
       "$dsoftbus_root_path/core/adapter/bus_center/include",
-      "${aakits_path}/ability/native/include",
-      "${aainnerkits_path}/want/include/ohos/aafwk/content",
+      "${aafwk_kits_path}/ability/native/include",
+      "${aafwk_inner_api_path}/want/include/ohos/aafwk/content",
       "//foundation/distributeddatamgr/appdatamgr/interfaces/inner_api/native/rdb/include",
       "//foundation/distributeddatamgr/appdatamgr/interfaces/inner_api/native/dataability/include",
-      "${aainnerkits_path}/dataobs_manager/include",
+      "${aafwk_inner_api_path}/dataobs_manager/include",
       "//base/account/os_account/interfaces/innerkits/ohosaccount/native/include/",
     ]
 
     bus_center_core_adapter_deps = [
-      "${aainnerkits_path}/dataobs_manager:dataobs_manager",
-      "${aakits_path}/ability/native:abilitykit_native",
+      "${aafwk_inner_api_path}/dataobs_manager:dataobs_manager",
+      "${aafwk_kits_path}/ability/native:abilitykit_native",
       "${ability_base_path}:want",
       "${ability_base_path}:zuri",
       "//base/account/os_account/frameworks/ohosaccount/native:libaccountkits",
