--- a/core/common/security/permission/permission.gni
+++ b/core/common/security/permission/permission.gni
@@ -36,7 +36,7 @@ if (defined(ohos_lite)) {
 } else {
   softbus_permission_inc = [
     "$dsoftbus_core_path/common/security/permission/include",
-    "${aakits_path}/appkit/native/app/include",
+    "${aafwk_kits_path}/appkit/native/app/include",
     "//utils/system/safwk/native/include",
   ]
   softbus_permission_src = [
