check samgr by access token
Signed-off-by: yangguangzhao <yangguangzhao1@huawei.com>

--- a/core/frame/BUILD.gn
+++ b/core/frame/BUILD.gn
@@ -175,6 +175,7 @@ if (defined(ohos_lite)) {
     if (is_standard_system) {
       external_deps = bus_center_server_external_deps
       external_deps += [
+        "access_token:libaccesstoken_sdk",
         "deviceauth_standard:deviceauth_sdk",
         "hiviewdfx_hilog_native:libhilog",
         "ipc:ipc_core",
