--- a/sdk/transmission/trans_channel/proxy/trans_proxy_sdk.gni
+++ b/sdk/transmission/trans_channel/proxy/trans_proxy_sdk.gni
@@ -13,6 +13,12 @@
 
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
-trans_proxy_channel_sdk_src = [ "$dsoftbus_sdk_path/transmission/trans_channel/proxy/src/client_trans_proxy_manager.c" ]
+trans_proxy_channel_sdk_src = [
+  "$dsoftbus_sdk_path/transmission/trans_channel/proxy/src/client_trans_proxy_manager.c",
+  "$dsoftbus_sdk_path/transmission/trans_channel/proxy/src/client_trans_pending.c",
+  "$dsoftbus_sdk_path/transmission/trans_channel/proxy/src/client_trans_proxy_file_common.c",
+  "$dsoftbus_sdk_path/transmission/trans_channel/proxy/src/client_trans_proxy_file_manager.c",
+]
+
 trans_proxy_channel_sdk_inc =
     [ "$dsoftbus_sdk_path/transmission/trans_channel/proxy/include/" ]
