fix:Add C language compilation options
Signed-off-by: mhy <mahaoyun1@huawei.com>

--- a/tests/sdk/bus_center/fuzztest/activemetanode_fuzzer/BUILD.gn
+++ b/tests/sdk/bus_center/fuzztest/activemetanode_fuzzer/BUILD.gn
@@ -32,6 +32,7 @@ ohos_fuzztest("ActiveMetaNodeFuzzTest") {
     "-O0",
     "-Wno-unused-variable",
     "-fno-omit-frame-pointer",
+    "-fstack-protector-strong",
   ]
   sources = [ "activemetanode_fuzzer.cpp" ]
 
