--- a/tests/sdk/bus_center/fuzztest/getlocalnodedeviceinfo_fuzzer/BUILD.gn
+++ b/tests/sdk/bus_center/fuzztest/getlocalnodedeviceinfo_fuzzer/BUILD.gn
@@ -32,6 +32,7 @@ ohos_fuzztest("GetLocalNodeDeviceInfoFuzzTest") {
     "-O0",
     "-Wno-unused-variable",
     "-fno-omit-frame-pointer",
+    "-fstack-protector-strong",
   ]
   sources = [ "getlocalnodedeviceinfo_fuzzer.cpp" ]
 
