--- a/tests/sdk/transmission/fuzztest/removesessionserver_fuzzer/BUILD.gn
+++ b/tests/sdk/transmission/fuzztest/removesessionserver_fuzzer/BUILD.gn
@@ -36,6 +36,7 @@ ohos_fuzztest("RemoveSessionServerFuzzTest") {
     "-O0",
     "-Wno-unused-variable",
     "-fno-omit-frame-pointer",
+    "-fstack-protector-strong",
   ]
   sources = [ "removesessionserver_fuzzer.cpp" ]
 
