--- a/tests/sdk/discovery/account/BUILD.gn
+++ b/tests/sdk/discovery/account/BUILD.gn
@@ -13,7 +13,7 @@
 
 import("//build/test.gni")
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
-module_output_path = "dsoftbus_standard/discovery"
+module_output_path = "dsoftbus/discovery"
 ohos_unittest("disc_account_test") {
   module_out_path = module_output_path
   sources = [ "disc_account_test.cpp" ]
