--- a/adapter/BUILD.gn
+++ b/adapter/BUILD.gn
@@ -63,11 +63,11 @@ if (defined(ohos_lite)) {
       ]
 
       deps = [ "//base/hiviewdfx/hilog_lite/frameworks/mini:hilog_lite" ]
-      if (dsoftbus_standard_feature_encrypt == 0) {
+      if (dsoftbus_feature_encrypt == 0) {
         sources +=
             [ "$softbus_adapter_common/mbedtls/softbus_adapter_crypto.c" ]
         deps += [ "//third_party/mbedtls" ]
-      } else if (dsoftbus_standard_feature_encrypt == 1) {
+      } else if (dsoftbus_feature_encrypt == 1) {
         sources +=
             [ "$softbus_adapter_common/openssl/softbus_adapter_crypto.c" ]
         deps += [ "//third_party/openssl:libcrypto_shared" ]
@@ -101,11 +101,11 @@ if (defined(ohos_lite)) {
         "//base/startup/syspara_lite/frameworks/parameter/src:sysparam",
         "//third_party/bounds_checking_function:libsec_shared",
       ]
-      if (dsoftbus_standard_feature_encrypt == 0) {
+      if (dsoftbus_feature_encrypt == 0) {
         sources +=
             [ "$softbus_adapter_common/mbedtls/softbus_adapter_crypto.c" ]
         deps += [ "//third_party/mbedtls" ]
-      } else if (dsoftbus_standard_feature_encrypt == 1) {
+      } else if (dsoftbus_feature_encrypt == 1) {
         sources +=
             [ "$softbus_adapter_common/openssl/softbus_adapter_crypto.c" ]
         deps += [ "//third_party/openssl:libcrypto_shared" ]
@@ -118,7 +118,7 @@ if (defined(ohos_lite)) {
     include_dirs = [
       "$softbus_adapter_common/include",
       "$softbus_adapter_common/include/OS_adapter_define/linux",
-      "$dsoftbus_standard_feature_product_config_path/spec_config",
+      "$dsoftbus_feature_product_config_path/spec_config",
       "$dsoftbus_root_path/core/common/include",
     ]
   }
@@ -132,7 +132,7 @@ if (defined(ohos_lite)) {
       "//third_party/bounds_checking_function/include",
     ]
     sources = [
-      "$dsoftbus_standard_feature_product_config_path/spec_config/softbus_config_adapter.c",
+      "$dsoftbus_feature_product_config_path/spec_config/softbus_config_adapter.c",
       "$softbus_adapter_common/bus_center/platform/bus_center_adapter.c",
       "$softbus_adapter_common/kernel/liteos_a/lnn_ip_utils_adapter.c",
       "$softbus_adapter_common/kernel/liteos_a/softbus_adapter_file.c",
@@ -147,10 +147,10 @@ if (defined(ohos_lite)) {
       "//third_party/bounds_checking_function:libsec_static",
       "//utils/native/base:utils",
     ]
-    if (dsoftbus_standard_feature_encrypt == 0) {
+    if (dsoftbus_feature_encrypt == 0) {
       sources += [ "$softbus_adapter_common/mbedtls/softbus_adapter_crypto.c" ]
       public_deps += [ "//third_party/mbedtls" ]
-    } else if (dsoftbus_standard_feature_encrypt == 1) {
+    } else if (dsoftbus_feature_encrypt == 1) {
       sources += [ "$softbus_adapter_common/openssl/softbus_adapter_crypto.c" ]
       public_deps += [ "//third_party/openssl:libcrypto_shared" ]
     }
@@ -158,7 +158,7 @@ if (defined(ohos_lite)) {
     if (is_standard_system) {
       external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
     }
-    part_name = "dsoftbus_standard"
+    part_name = "dsoftbus"
     subsystem_name = "communication"
   }
 }
