--- a/components/nstackx/nstackx_util/BUILD.gn
+++ b/components/nstackx/nstackx_util/BUILD.gn
@@ -15,7 +15,7 @@ import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 NSTACKX_ROOT = "//foundation/communication/dsoftbus/components/nstackx"
 cflags = [ "-DENABLE_DFINDER_HILOG" ]
-if (dsoftbus_standard_feature_ifname_prefix) {
+if (dsoftbus_feature_ifname_prefix) {
   cflags += [ "-DETH_DEV_NAME_PRE=\"br\"" ]
 }
 if (defined(ohos_lite)) {
@@ -162,7 +162,7 @@ if (defined(ohos_lite)) {
     ]
     external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
     public_configs = [ ":nstackx_util_header" ]
-    part_name = "dsoftbus_standard"
+    part_name = "dsoftbus"
     subsystem_name = "communication"
   }
 }
