--- a/core/frame/standard/sa_profile/BUILD.gn
+++ b/core/frame/standard/sa_profile/BUILD.gn
@@ -16,5 +16,5 @@ import("//build/ohos/sa_profile/sa_profile.gni")
 ohos_sa_profile("softbus_sa_profile") {
   sources = [ "4700.xml" ]
 
-  part_name = "dsoftbus_standard"
+  part_name = "dsoftbus"
 }
