--- a/tests/adapter/unittest/BUILD.gn
+++ b/tests/adapter/unittest/BUILD.gn
@@ -45,7 +45,7 @@ if (defined(ohos_lite)) {
   import("//build/test.gni")
   import("//foundation/communication/dsoftbus/dsoftbus.gni")
   defines += [ "HAVE_PRO = 0" ]
-  module_output_path = "dsoftbus_standard/adapter"
+  module_output_path = "dsoftbus/adapter"
   ohos_unittest("AdapterTest") {
     module_out_path = module_output_path
     sources = [
