--- a/tests/core/common/anonymize/BUILD.gn
+++ b/tests/core/common/anonymize/BUILD.gn
@@ -30,7 +30,7 @@ if (defined(ohos_lite)) {
 } else {
   import("//build/test.gni")
 
-  module_output_path = "dsoftbus_standard/common"
+  module_output_path = "dsoftbus/common"
   ohos_unittest("AnonymizePacketTest") {
     module_out_path = module_output_path
     sources = [ "anonymize_packet_test.cpp" ]
