--- a/tests/sdk/transmission/fuzztest/removesessionserver_fuzzer/BUILD.gn
+++ b/tests/sdk/transmission/fuzztest/removesessionserver_fuzzer/BUILD.gn
@@ -19,7 +19,7 @@ import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 ##############################fuzztest##########################################
 ohos_fuzztest("RemoveSessionServerFuzzTest") {
-  module_out_path = "dsoftbus_standard/transmission"
+  module_out_path = "dsoftbus/transmission"
   fuzz_config_file = "//foundation/communication/dsoftbus/tests/sdk/transmission/fuzztest/removesessionserver_fuzzer"
   include_dirs = [
     "//foundation/communication/dsoftbus/core/common/inner_communication",
