--- a/tests/sdk/transmission/trans_channel/ble/phone/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/ble/phone/BUILD.gn
@@ -13,7 +13,7 @@
 
 import("//build/test.gni")
 import("//foundation/communication/dsoftbus/dsoftbus.gni")
-module_output_path = "dsoftbus_standard/transmission"
+module_output_path = "dsoftbus/transmission"
 ohos_unittest("dsoftbus_auth_ble_phone") {
   module_out_path = module_output_path
   sources = [ "ble_auth_channel_phone_test.cpp" ]
