--- a/tests/sdk/transmission/trans_channel/permission/BUILD.gn
+++ b/tests/sdk/transmission/trans_channel/permission/BUILD.gn
@@ -17,7 +17,7 @@ if (defined(ohos_lite)) {
 } else {
   import("//build/test.gni")
 
-  module_output_path = "dsoftbus_standard/transmission"
+  module_output_path = "dsoftbus/transmission"
   ohos_unittest("DynamicPermissionTest") {
     module_out_path = module_output_path
     sources = [ "trans_dynamic_permission_test.cpp" ]
