--- a/core/bus_center/lnn/lane_hub/lane_hub.gni
+++ b/core/bus_center/lnn/lane_hub/lane_hub.gni
@@ -76,11 +76,9 @@ if (dsoftbus_feature_lnn_net) {
   ]
 }
 
-if (dsoftbus_feature_lnn_net &&
-    dsoftbus_feature_lnn_time_sync && enhanced) {
+if (dsoftbus_feature_lnn_net && dsoftbus_feature_lnn_time_sync && enhanced) {
   bus_center_hub_deps += [ "$dsoftbus_root_path/dsoftbus_enhance/core/bus_center/lnn/lane_hub/time_sync:dsoftbus_time_sync_impl" ]
 }
-if (dsoftbus_feature_lnn_net &&
-    dsoftbus_feature_lnn_heartbeat && enhanced) {
+if (dsoftbus_feature_lnn_net && dsoftbus_feature_lnn_heartbeat && enhanced) {
   bus_center_hub_deps += [ "$dsoftbus_root_path/dsoftbus_enhance/core/bus_center/lnn/lane_hub/heartbeat:dsoftbus_heartbeat_impl" ]
 }
