--- a/core/bus_center/utils/bus_center_utils.gni
+++ b/core/bus_center/utils/bus_center_utils.gni
@@ -25,8 +25,7 @@ if (dsoftbus_feature_lnn_net) {
   bus_center_utils_src +=
       [ "$core_bus_center_utils_path/src/lnn_state_machine.c" ]
 }
-if (dsoftbus_feature_lnn_net ||
-    dsoftbus_feature_lnn_meta_node) {
+if (dsoftbus_feature_lnn_net || dsoftbus_feature_lnn_meta_node) {
   bus_center_utils_src += [
     "$core_bus_center_utils_path/src/lnn_file_utils.c",
     "$core_bus_center_utils_path/src/lnn_network_id.c",
